--- a/tests/Sphinx/Tests/Fixtures/sphinxtest.conf
+++ b/tests/Sphinx/Tests/Fixtures/sphinxtest.conf
@@ -2,9 +2,9 @@ source sphinxtest_src
 {
     type = mysql
     sql_host = 127.0.0.1
-    sql_user = root
+    sql_user = travis
     sql_pass =
-    sql_db = test
+    sql_db = sphinx
     sql_port = 3306
     sql_query_pre = SET CHARACTER_SET_RESULTS=utf8
     sql_query_pre = SET NAMES utf8
@@ -19,7 +19,7 @@ source sphinxtest_src
 index sphinxtest
 {
     source = sphinxtest_src
-    path = ./data/sphinxtest
+    path = /etc/sphinxtest
     html_strip = 0
     min_word_len = 1
     charset_type = utf-8
@@ -29,7 +29,7 @@ index sphinxtest
 searchd
 {
     listen = 9312
-    log = ./log/searchd.log
-    query_log = ./log/query.log
-    pid_file = ./log/searchd.pid
+    log = /etc/searchd.log
+    query_log = /etc/query.log
+    pid_file = /etc/searchd.pid
 }
